{
    "name": "TouchAction",
    "maps": [
        {
            "name": "Touch",
            "id": "501088d0-6abb-4a2a-8307-1675088b7bdf",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "1388f304-bfee-4c27-a78d-65fb8bc9a2b1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "3bf33566-436b-45d6-920e-5163b3c20c49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchRelease",
                    "type": "Button",
                    "id": "83665e6a-d574-4c03-bd9a-1b36dac9bff4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchTap",
                    "type": "Button",
                    "id": "5f0f0887-a1d9-4e51-9339-e28b9802b60a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4ad87de0-4a30-4988-ab72-7524ea0a3d6f",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c78315a0-2d7b-4899-88e9-64d0e6cc5da4",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7db3b2c5-4f6d-4025-986e-e6d104d1bbd8",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3572f45-379a-49e6-a8bc-b4583f5539dd",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}